search post filter the psot by sale posts

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "crpyto": "^0.0.1-security",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
@@ -71,6 +72,7 @@
     "motion": "^12.18.1",
     "next": "^15.3.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "npm": "^11.4.2",
     "react": "^19.1.0",
     "react-date-range": "^2.0.1",
@@ -96,6 +98,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.10",
     "@types/node": "^24.0.3",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^19.1.8",
     "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19.1.6",
