--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "npm": "^11.4.2",
     "react": "^19.1.0",
     "react-date-range": "^2.0.1",
-    "react-day-picker": "9.7.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
