--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "scan": "next dev & npx react-scan@latest localhost:3000",
-    "build": "npm install --force && next build",
+    "build": " next build",
     "start": "next start",
     "lint": "next lint",
     "vercel-build": "npm install --force && next build"
